Fixing error. Images stretch in safari

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ body, html{
 
 
 .image1-1{
-    object-fit: fill;
+    object-fit: cover;
     max-width: 100%;
     height: 100%;
 }
